# microvm

./: .clang-format  .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: debug.yml  release.yml  test.yml
include/: microvm.h
src/: Makefile  args.rs  config.rs  elf.c  elf.rs  file.rs  http.rs  initrd.c  io.rs  main.c  main.rs  microvm.c  microvm.rs  vmm.rs
src/gateway/: Cargo.toml
src/gateway/examples/echo/: args.rs  config.rs  main.rs
src/gateway/src/: client.rs  gateway.rs  lib.rs  route.rs
src/kvm/: emulator.rs  mod.rs  partition.rs  vmem.rs
src/kvm/vcpu/: exit.rs  mod.rs  register.rs  vcpu.rs
src/microvm/: Cargo.toml
src/microvm/src/: args.rs  config.rs  main.rs  microvm.rs  vmm.rs
src/microvm/src/kvm/: vmem.rs
src/microvm/src/kvm/vcpu/: exit.rs
src/microvm/src/profiler/: mod.rs  scope.rs
src/mshv/: emulator.rs  mod.rs  partition.rs  vcpu.rs  vmem.rs
src/pal/: linux.rs  mod.rs  windows.rs
src/profiler/: mod.rs  scope.rs
test/: Makefile  kmain.c  start.S
test/fibonacci/: Makefile  kmain.c  start.S
test/hello-world/: Makefile
test/matrix/: Makefile  kmain.c  start.S
test/noop/: Makefile  kmain.c  start.S
