# Copyright(c) The Maintainers of Nanvix.
# Licensed under the MIT License.

[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
flexi_logger = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sys  = { workspace = true }
hyper = { version = "1", features = ["full"] }
tokio = { workspace = true }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
