# Copyright(c) The Maintainers of Nanvix.
# Licensed under the MIT License.

[package]
name = "microvm"
authors = ["The Maintainers of Nanvix"]
version = "0.5.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
flexi_logger = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
kernel = { workspace = true }
cfg-if = "1.0.0"
gateway = { path = "../gateway" }
tokio = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
kvm-bindings = "0.9.0"
kvm-ioctls = "0.18.0"
libc = "0.2.159"

[features]
default = []
profiler = ["auto-calibrate"]
auto-calibrate = []
