# Copyright(c) The Maintainers of Nanvix.
# Licensed under the MIT License.

[package]
name = "microvm"
authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
flexi_logger = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
kernel = { workspace = true }
cfg-if = "1.0.0"
gateway = { path = "../gateway" }
tokio = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
kvm-bindings = "0.9.0"
kvm-ioctls = "0.18.0"
libc = "0.2.159"

[features]
default = []
profiler = ["auto-calibrate"]
auto-calibrate = []
